first calc being built

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Spectre CSS Index Page</title>
+  <title>The Freedom Project</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
 
   <style>
@@ -38,7 +38,7 @@
       <a href="#" class="navbar-brand">The Freedom Project</a>
     </section>
     <section class="navbar-section">
-      <a href="#" class="btn btn-link">Contact</a>
+      <a href="#" class="btn btn btn-link">Contact</a>
     </section>
   </header>
   
@@ -51,7 +51,7 @@
     <div class="content">
   <div class="columns">
     <div class="column col-4">
-      <h5>Calculator for Paying off Credit Cards</h5>
+      <h5><a href="credit-card-calc-1.html">Calculator for Paying off Credit Cards</a></h5>
       <h5>Bimonthly Mortgage Caculator</h5>
     </div>
     <div class="column col-4">
