added more future additions to the index page

--- a/credit-card-calc-1.html
+++ b/credit-card-calc-1.html
@@ -24,8 +24,66 @@
 
     <div class="container">
         <form>
-
-
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Account</th>
+                    <th>Outstanding Balance</th>
+                    <th>Minimum Monthly Payment</th>
+                    <th>Result</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+                <tr>
+                    <td><input type="text"></input></td>
+                    <td><input type="number"></input></td>
+                    <td><input type="number"></input></td>
+                    <td id="result1"></td>
+                </tr>
+            </tbody>
+        </table>
 
 
   <input type="submit" class="btn btn-success" value="Get Result">
