--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="column col-4">
       <h5><a href="credit-card-calc-1.html">Calculator for Paying off Credit Cards</a></h5>
       <h5>Bimonthly Mortgage Caculator</h5>
-      <h5>Pomodoro timer</h5>
+      <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5>days left in my life calculator</h5>
       <h5>Retirement calculator</h5>
     </div>
