--- a/pomodoro.html
+++ b/pomodoro.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div id="timer" class="text-center">25:00</div>
         <div class="form-group">
-            <label for="inputTime">Enter time in minutes:</label>
+            <label for="inputTime">Use the buttons or, enter time in minutes:</label>
             <input type="number" id="inputTime" class="form-input" placeholder="Enter time">
         </div>
         <div class="form-group">
@@ -18,9 +18,12 @@
             <button id="resetButton" class="btn">Reset</button>
         </div>
         <div class="form-group">
+            <button id="workButton20" class="btn">20 Min Work</button>
+            <button id="workButton25" class="btn">25 Min Work</button>
             <button id="breakButton5" class="btn">5 Min Break</button>
             <button id="breakButton10" class="btn">10 Min Break</button>
             <button id="breakButton15" class="btn">15 Min Break</button>
+
         </div>
         <!--<div class="form-group">
             <label for="darkModeToggle">Dark Mode:</label>
