--- a/index.html
+++ b/index.html
@@ -75,21 +75,24 @@
     <div class="content">
   <div class="columns">
     <div class="column col-4">
-      <h5><a href="credit-card-calc-1.html">Calculator for Paying off Credit Cards</a></h5>
+      <h5><a href="credit-card-debt.html">Calculator for Paying off Credit Cards</a></h5>
       <h5>Bimonthly Mortgage Caculator</h5>
       <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
-      <h5>days left in my life calculator</h5>
+      <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
       <h5>Retirement calculator</h5>
+      <h5>Saving vs spending calculator</h5>
     </div>
     <div class="column col-4">
       <h5>Expense Ratio Calculator</h5>
       <h5>How fast will my money double calculator(rule of 72)</h5>
       <h5>Financial levels calculators 1 - 7</h5>
+      <h5><a href="books.html">Reccomended Readings</a></h5>
     </div>
     <div class="column col-4">
       <h5>Real Estate vs Stocks Calculator</h5>
       <h5>Financial independance calculator FI RE</h5>
       <h5>reoccuring expense calculator (rule of 752)</h5>
+      <h5>Work for yourself 1 hour a work day calculator</h5>
 
     </div>
 
