--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,7 +3,44 @@
 <head>
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-    <link rel="stylesheet" type="text/css" href="pomodoro.css">
+    <style>
+    
+    body {
+    text-align: center;
+    font-family: Arial, sans-serif;
+}
+
+h1 {
+    color: #fff;
+    margin-top: 40px;
+}
+
+.container {
+    max-width: 400px;
+    margin: 40px auto;
+}
+
+#timer {
+    font-size: 48px;
+    margin: 20px 0;
+}
+
+.form-group {
+    margin-top: 20px;
+}
+
+.form-input {
+    width: 100%;
+}
+
+.btn {
+    margin: 10px;
+}
+
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+}</style>
 </head>
 <body class="dark-mode">
     <h1>Pomodoro Timer</h1>
