--- a/pomodoro.html
+++ b/pomodoro.html
@@ -4,43 +4,43 @@
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
     <style>
-    
-    body {
-    text-align: center;
-    font-family: Arial, sans-serif;
-}
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
 
-h1 {
-    color: #fff;
-    margin-top: 40px;
-}
+        h1 {
+            color: #fff;
+            margin-top: 40px;
+        }
 
-.container {
-    max-width: 400px;
-    margin: 40px auto;
-}
+        .container {
+            max-width: 400px;
+            margin: 40px auto;
+        }
 
-#timer {
-    font-size: 48px;
-    margin: 20px 0;
-}
+        #timer {
+            font-size: 48px;
+            margin: 20px 0;
+        }
 
-.form-group {
-    margin-top: 20px;
-}
+        .form-group {
+            margin-top: 20px;
+        }
 
-.form-input {
-    width: 100%;
-}
+        .form-input {
+            width: 100%;
+        }
 
-.btn {
-    margin: 10px;
-}
+        .btn {
+            margin: 10px;
+        }
 
-.dark-mode {
-    background-color: #333;
-    color: #fff;
-}</style>
+        .dark-mode {
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
 </head>
 <body class="dark-mode">
     <h1>Pomodoro Timer</h1>
@@ -64,10 +64,26 @@ h1 {
         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
     </div>
     <audio id="completionSound" src="/Assets/sound.mp3"></audio>
     <script src="script.js"></script>
     <script>
+        // Check if the browser supports notifications
+        if ("Notification" in window) {
+            // Request permission to send notifications
+            Notification.requestPermission().then(function (permission) {
+                // Permission can be "granted", "denied", or "default"
+                if (permission === "granted") {
+                    // User granted permission, you can now send notifications
+                    console.log("Notification permission granted");
+                }
+            });
+        }
+
+        // Rest of your JavaScript code here
         // Timer variables
         let time = 1500; // 25 minutes in seconds
         let timerId;
@@ -80,8 +96,8 @@ h1 {
         const startButton = document.getElementById("startButton");
         startButton.addEventListener("click", () => {
             if (!isRunning) {
-                const inputTime = document.getElementById("inputTime").value;
-                if (inputTime) {
+                const inputTime = parseInt(document.getElementById("inputTime").value, 10);
+                if (!isNaN(inputTime) && inputTime > 0) {
                     time = inputTime * 60;
                     updateTimerDisplay();
                 }
