--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
   <div class="columns">
     <div class="column col-4">
       <h5><a href="credit-card-debt.html">Calculator for Paying off Credit Cards</a></h5>
-      <h5>Bimonthly Mortgage Caculator</h5>
+      <h5><a href="bimonthly-mortgage.html">Bimonthly Mortgage Caculator</a></h5>
       <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
       <h5>Retirement calculator</h5>
-      <h5>Saving vs spending calculator</h5>
+      <h5><a href="save-1-month-of-expenses.html">Saving vs spending calculator</a></h5>
+      <h5>Credit card points vs cashback vs invested returns</h5>
     </div>
     <div class="column col-4">
       <h5>Expense Ratio Calculator</h5>
