bug fixed in pomodoro, the start button would become disabled after use

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -231,6 +231,7 @@
             time = 1500;
             isRunning = false;
             startButton.textContent = "Start";
+            startButton.disabled = false; // Enable the start button
             updateTimerDisplay();
             updateTitle(time);
         }
