net worth calculator with graph created

--- a/credit-card-debt.html
+++ b/credit-card-debt.html
@@ -115,8 +115,10 @@ function calculateSum(event) {
 </head>
 <body>
     <div class="container">
-        <h1>Credit Card Debt Paydown Calculator</h1>
-        <h6></h6>
+        <h1>Credit Card Debt Calculators</h1>
+        <h5>You could always choose to pay down your credit cards by highest interest rate first. </h5>
+        <h5>Other Options: Negotiate a lower interest rate or do a balance transfer to a 0% interest rate card. </h5>
+        <h3>DOLP Calculator</h3>
         <form onsubmit="calculateSum(event)">
             <table class="table" id="data-table">
                 <thead>
@@ -124,7 +126,7 @@ function calculateSum(event) {
                         <th>Account Name</th>
                         <th>Outstanding Balance</th>
                         <th>Minimum Monthly Payment</th>
-                        <th>Magic Number</th>
+                        <th>DOLP Number</th>
                         <th>Result</th>
                     </tr>
                 </thead>
@@ -201,6 +203,7 @@ function calculateSum(event) {
                     </tr>
                 </tbody>
             </table>
+                    <p>I am a fan of yours David Bach. I hope this calculator helps your readers.</p>
             <button type="submit" class="btn btn-success">Get Result</button>
                     <h6><a href="index.html">Click here to go back to the home page</a></h6>
         
