--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="content">
   <div class="columns">
     <div class="column col-4">
-      <h5><a href="credit-card-debt.html">Calculator for Paying off Credit Cards</a></h5>
+      <h5><a href="credit-card-debt.html">Credit Card Debt Calculators</a></h5>
       <h5><a href="bimonthly-mortgage.html">Bimonthly Mortgage Caculator</a></h5>
       <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
@@ -84,7 +84,7 @@
       <h5>Credit card points vs cashback vs invested returns</h5>
     </div>
     <div class="column col-4">
-      <h5>Expense Ratio Calculator</h5>
+      <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
       <h5>How fast will my money double calculator(rule of 72)</h5>
       <h5>Financial levels calculators 1 - 7</h5>
       <h5><a href="books.html">Reccomended Readings</a></h5>
