--- a/pomodoro.html
+++ b/pomodoro.html
@@ -60,6 +60,7 @@
             <button id="breakButton5" class="btn">5 Min Break</button>
             <button id="breakButton10" class="btn">10 Min Break</button>
             <button id="breakButton15" class="btn">15 Min Break</button>
+            <button id="test" onclick="playSound()" class="btn">Test alarm sound</button>
         </div>
         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
