--- a/save-1-month-of-expenses.html
+++ b/save-1-month-of-expenses.html
@@ -45,6 +45,7 @@
             <label for="inputSavingsRate">Savings Rate (as a % of your total income, example: 15%):</label>
             <input type="number" id="inputSavingsRate" class="form-input" placeholder="Enter savings rate">
         </div>
+        <p>The two numbers above should equal 100% (all of your income).</p>
         <div class="form-group">
             <button id="calculateButton" class="btn btn-primary">Calculate</button>
         </div>
