rule of 72 and 752 or 153 calculators done and in a working state

--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
       <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
       <h5>Retirement calculator</h5>
-      <h5><a href="save-1-month-of-expenses.html">Saving vs spending calculator</a></h5>
+      <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns</h5>
     </div>
     <div class="column col-4">
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
-      <h5>How fast will my money double calculator(rule of 72)</h5>
+      <h5><a href="rule-of-72.html">How fast will my money double calculator(rule of 72)</a></h5>
       <h5>Financial levels calculators 1 - 7</h5>
       <h5><a href="books.html">Reccomended Readings</a></h5>
     </div>
     <div class="column col-4">
       <h5>Real Estate vs Stocks Calculator</h5>
       <h5>Financial independance calculator FI RE</h5>
-      <h5>reoccuring expense calculator (rule of 752)</h5>
-      <h5>Work for yourself 1 hour a work day calculator</h5>
-
+      <h5><a href="reoccuring-expenses.html">Reoccuring expense calculator (rule of 752)</a></h5>
+      <h5><a href="working-for-myself.html">How many hours per week do I work for myself?</a></h5>
+      <h5>Saving vs spending calculator (reoccuring expenses calculator)</h5>
     </div>
 
 
