saving one month of eexpenses calc only needs savings rate now, easier to use and understand

--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
       <h5>Retirement calculator</h5>
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns</h5>
+
     </div>
     <div class="column col-4">
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
       <h5><a href="rule-of-72.html">How fast will my money double calculator(rule of 72)</a></h5>
       <h5>Financial levels calculators 1 - 7</h5>
-      <h5><a href="books.html">Reccomended Readings</a></h5>
+      <h5><a href="books.html">Reccomended Readings</a></h5>      <h5>Traditional IRA vs Roth Caclulator</h5>
+      <h5>Roth Conversion Calculator</h5>
     </div>
     <div class="column col-4">
       <h5>Real Estate vs Stocks Calculator</h5>
