--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h5><a href="bimonthly-mortgage.html">Bimonthly Mortgage Caculator</a></h5>
       <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
-      <h5>Retirement calculator</h5>
+      <h5><a href="retirement-calculator.html">Retirement or FI RE calculator</a></h5>
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns</h5>
 
@@ -88,7 +88,7 @@
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
       <h5><a href="rule-of-72.html">How fast will my money double calculator(rule of 72)</a></h5>
       <h5>Financial levels calculators 1 - 7</h5>
-      <h5><a href="books.html">Reccomended Readings</a></h5>      <h5>Traditional IRA vs Roth Caclulator</h5>
+      <h5><a href="books.html">Reccomended Readings</a></h5>      <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator</a></h5>
       <h5>Roth Conversion Calculator</h5>
     </div>
     <div class="column col-4">
