added link back to homepage, text to books section

--- a/bimonthly-mortgage.html
+++ b/bimonthly-mortgage.html
@@ -42,6 +42,8 @@
 <body>
     <div class="container">
         <h1>Bimonthly Mortgage Payment Calculator</h1>
+                <p>This calculator is still a work in progress. Please contribute code on our github if you want to help.</p>
+
         <div class="form-group">
             <label for="principal">Principal loan balance:</label>
             <input type="number" id="principal" class="form-input" placeholder="Enter principal balance" required>
@@ -64,6 +66,12 @@
             <div id="biweeklyPayment"></div>
             <div id="biweeklyInterest"></div>
         </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>        
         <div class="amortization">
             <h2>Amortization Table:</h2>
             <table id="amortizationTable" class="table"></table>
