--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   <div class="columns">
     <div class="column col-4">
       <h5><a href="credit-card-debt.html">Credit Card Debt Calculators</a></h5>
-      <h5><a href="bimonthly-mortgage.html">Bimonthly Mortgage Caculator</a></h5>
+      <h5><a href="bimonthly-mortgage.html">Bimonthly Mortgage Caculator COMING SOON. Contribute code on our github.</a></h5>
       <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
-      <h5><a href="retirement-calculator.html">Retirement or FI RE calculator</a></h5>
+      <h5><a href="retirement-calculator.html">Retirement or FI RE calculator COMING SOON. Contribute code on our github.</a></h5>
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns COMING SOON. Contribute code on our github.</h5>
 
@@ -87,17 +87,17 @@
     <div class="column col-4">
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
       <h5><a href="rule-of-72.html">How fast will my money double calculator(rule of 72)</a></h5>
-      <h5>Financial levels calculators 1 - 7</h5>
-      <h5><a href="books.html">Reccomended Readings</a></h5>      <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator</a></h5>
-      <h5>Roth Conversion Calculator</h5>
+      <h5>Financial levels calculators 1 - 7 COMING SOON. Contribute code on our github.</h5>
+      <h5><a href="books.html">Reccomended Readings</a></h5>      
+      <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator COMING SOON. Contribute code on our github.</a></h5>
+      <h5>Roth Conversion Calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="one-rep-max.html">One Rep Max Calculator</a></h5>
       <h5><a href="living-off-savings.html">How long can I live off my savings / investments?</a></h5>
     </div>
     <div class="column col-4">
-      <h5>Real Estate vs Stocks Calculator</h5>
+      <h5>Real Estate vs Stocks Calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="reoccuring-expenses.html">Reoccuring expense calculator (rule of 752)</a></h5>
       <h5><a href="working-for-myself.html">How many hours per week do I work for myself?</a></h5>
-      <h5>Saving vs spending calculator (reoccuring expenses calculator)</h5>
       <h5><a href="savings-goal.html">Savings Goal Calculator, Down Payments, Appliances, Cars, College, Dream Goal, Any Large Purchase.</a></h5>
     </div>
 
