--- a/working-for-myself.html
+++ b/working-for-myself.html
@@ -37,6 +37,7 @@
 <body>
     <div class="container">
         <h1>How many hours per week do I work for myself? Instead of for my creditors, boss, etc.?</h1>
+        <p>David Bach reccomends trying to work at least 1 hour a working day for yourself. </p>
         <div class="form-group">
             <label for="hoursWorked">Last week, I worked <input type="number" id="hoursWorked" class="form-input" placeholder="hours"></label>
         </div>
@@ -50,7 +51,12 @@
             <label>Last week, I worked <span id="selfEmployedHours"></span> hours for myself.</label>
         </div>
          <div id="result" class="form-group"></div>
-        <button id="calculateButton" class="btn btn-primary">Calculate</button>
+        <button id="calculateButton" class="btn btn-primary">Calculate</button>                <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
     </div>
 
     <script>
