--- a/credit-card-debt.html
+++ b/credit-card-debt.html
@@ -205,8 +205,12 @@ function calculateSum(event) {
             </table>
                     <p>I am a fan of yours David Bach. I hope this calculator helps your readers.</p>
             <button type="submit" class="btn btn-success">Get Result</button>
-                    <h6><a href="index.html">Click here to go back to the home page</a></h6>
-        
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
         </form>
     </div>
 </body>
