--- a/ira-vs-roth.html
+++ b/ira-vs-roth.html
@@ -53,11 +53,17 @@
         </div>
         <div class="form-group">
             <button id="calculateButton" class="btn btn-primary">Calculate</button>
+        </div>                        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
         </div>
         <div id="result" class="form-group"></div>
         <div id="chartContainer">
             <canvas id="comparisonChart"></canvas>
         </div>
+
     </div>
 
     <script>
