--- a/life.html
+++ b/life.html
@@ -97,7 +97,12 @@
         <button type="submit" class="btn btn-primary">Calculate</button>
       </div>
     </form>
-    <div id="result" class="result-container mt-3"></div>
+    <div id="result" class="result-container mt-3"></div>                <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
   </div>
 
   <script>
