--- a/living-off-savings.html
+++ b/living-off-savings.html
@@ -57,6 +57,12 @@
         </div>
         <button id="calculateButton" class="btn btn-primary">Calculate</button>
         <div id="result"></div>
+                        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
     </div>
 
     <script>
