--- a/net-worth.html
+++ b/net-worth.html
@@ -43,12 +43,6 @@
 <body>
     <div class="container">
         <h1>Expense Ratio Calculator</h1>
-                <div class="form-group">
-            <h6><a href="index.html">Click here to go back to the home page</a></h6>
-        </div>
-        <div class="form-group">
-            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
-        </div>
         <div class="form-group">
             <label for="initialInvestment">Initial Investment:</label>
             <input type="number" id="initialInvestment" class="form-input" placeholder="Enter initial investment">
@@ -99,12 +93,17 @@
                 <option value="daily">Daily</option>
             </select>
         </div>
-        <button id="calculateButton" class="btn btn-primary">Calculate</button>
+        <button id="calculateButton" class="btn btn-primary">Calculate</button>                        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
         <div id="result" class="form-group"></div>
         <div id="chart-container">
             <canvas id="chart"></canvas>
         </div>
-        
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
