--- a/one-rep-max.html
+++ b/one-rep-max.html
@@ -45,6 +45,12 @@
         </div>
         <button id="calculateButton" class="btn btn-primary">Calculate</button>
         <div id="result" class="form-group"></div>
+                        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
     </div>
 
     <script>
