--- a/retirement-calculator.html
+++ b/retirement-calculator.html
@@ -81,6 +81,12 @@
         <div class="form-group">
             <button id="calculateButton" class="btn btn-primary">Calculate</button>
         </div>
+                        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
         <div id="result" class="form-group"></div> <!-- Result element -->
         <div id="chartContainer">
             <canvas id="netWorthChart"></canvas>
