--- a/savings-goal.html
+++ b/savings-goal.html
@@ -60,6 +60,12 @@
             <input type="number" id="timeFrame" class="form-input" placeholder="Enter timeframe in months">
         </div>
         <button id="calculateButton" class="btn btn-primary">Calculate</button>
+                        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
+        </div>
         <div id="result" class="form-group"></div>
         <div id="chart-container">
             <canvas id="chart"></canvas>
