--- a/living-off-savings.html
+++ b/living-off-savings.html
@@ -37,6 +37,7 @@
 <body>
     <div class="container">
         <h1>How long will your savings or investment portfolio last?</h1>
+        <p>It is the authors intent that you check all math with this calculator because it is so critical.</p>
         <h6>Assumptions:</h6>
         <ul>
             <li>You have no income in retirement.</li>
