--- a/savings-goal.html
+++ b/savings-goal.html
@@ -64,8 +64,7 @@
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
         <div class="form-group">
-            <h6><a href="index.html">Click here to go back to submit an improvement</a></h6>
-        </div>
+            <h6><a href="https://github.com/JeffreyDinackus/JeffreyDinackus.com">Click here to go back to submit an improvement</a></h6>        </div>
         <div id="result" class="form-group"></div>
         <div id="chart-container">
             <canvas id="chart"></canvas>
