icon added to all pages

--- a/bimonthly-mortgage.html
+++ b/bimonthly-mortgage.html
@@ -38,6 +38,8 @@
             text-align: left;
         }
     </style>
+        <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+
 </head>
 <body>
     <div class="container">
