--- a/books.html
+++ b/books.html
@@ -52,7 +52,10 @@
       font-size: 0.9rem;
       color: #adb5bd;
     }
+    
   </style>
+      <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+
   <title>Recommended Books</title>
 </head>
 <body>
