--- a/credit-card-debt.html
+++ b/credit-card-debt.html
@@ -112,6 +112,8 @@ function calculateSum(event) {
     });
 }
     </script>
+        <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+
 </head>
 <body>
     <div class="container">
