--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             document.getElementById('popup-container').style.display = 'none';
         }
     </script>
+    <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+
 </head>
 <body>
   <header class="navbar">
