--- a/life.html
+++ b/life.html
@@ -76,6 +76,7 @@
       color: #fff;
     }
   </style>
+      <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 </head>
 <body>
   <div class="container">
