--- a/living-off-savings.html
+++ b/living-off-savings.html
@@ -33,6 +33,7 @@
             margin-top: 40px;
         }
     </style>
+<link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 </head>
 <body>
     <div class="container">
