--- a/one-rep-max.html
+++ b/one-rep-max.html
@@ -29,6 +29,7 @@
             width: 100%;
         }
     </style>
+<link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 </head>
 <body>
     <div class="container">
