--- a/retirement-calculator.html
+++ b/retirement-calculator.html
@@ -38,6 +38,7 @@
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 </head>
 <body>
     <div class="container">
