--- a/financial-levels.html
+++ b/financial-levels.html
@@ -31,6 +31,8 @@
             margin-top: 40px;
         }
     </style>
+        <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+
 </head>
 <body>
     <div class="container">
