--- a/ira-vs-roth.html
+++ b/ira-vs-roth.html
@@ -35,6 +35,8 @@
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+
 </head>
 <body>
     <div class="container">
