--- a/pomodoro.html
+++ b/pomodoro.html
@@ -41,6 +41,7 @@
             color: #fff;
         }
     </style>
+<link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 </head>
 <body class="dark-mode">
     <h1>Pomodoro Timer</h1>
