--- a/savings-goal.html
+++ b/savings-goal.html
@@ -39,6 +39,7 @@
             width: 100% !important;
         }
     </style>
+<link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 </head>
 <body>
     <div class="container">
