readme updated, affiliate marketing disclaimer added

--- a/books.html
+++ b/books.html
@@ -62,6 +62,8 @@
   <div class="container">
     <h1>Reccomended Readings on Personal Finance</h1>
     <h6>It is best practice to read multiple books, this will both inform you and strengthen your resolve when it comes to saving, if you want to start with one, the Simple Path to Qealth and Retire Before Mom and Dad are good choices.</h6>
+    <p>This page uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is this page. This money helps offset the cost of hosting and the domain names, and helps ensure you will recieve updates and more content. </p>
+
     <div class="book">
       <img class="book-image" src="/Assets/Media/book1.jpg" alt="Book 1">
       <div class="book-details">
