--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
       <h5><a href="rule-of-72.html">How fast will my money double calculator(rule of 72)</a></h5>
       <h5>Financial levels calculators 1 - 7 COMING SOON. Contribute code on our github.</h5>
-      <h5><a href="books.html">Reccomended Readings</a></h5>      
+      <h5><a href="books.html">Reccomended Books</a></h5>      
       <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator COMING SOON. Contribute code on our github.</a></h5>
       <h5>Roth Conversion Calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="one-rep-max.html">One Rep Max Calculator</a></h5>
@@ -148,7 +148,7 @@
       <h2>About</h2>
       <p>This is a free and open source project. View code and contribute on our github page.</p>
       <p>All calculators are for ILLUSTRATIVE purposes only. Do not expect returns to be identical to the results of the calculators on this website. You assume all risk by using this website. </p>
-      <p></p>
+      <p>This website uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is the books page. This money helps offset the cost of hosting and the domain names, and the developers time, and helps ensure you will recieve updates and more content. </p>
     </div>
   </div>
     <div class="container">
